Небольшой рефактор
Убрал хардкод, почистил код, поправил тесты